--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,10 @@
-@import url('http://fonts.cdnfonts.com/css/segoe-ui-4');
-
-/* estilo del scrollbar */
-::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
+.card {
+    border-radius: 10px;
+    border: 2px solid #f5f5f5;
+    display: flex;
+    flex-direction: row;
 }
-::-webkit-scrollbar-track {
-    background: #f5f5f5;
-}
-::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 5px;
-}
-
-.ck-editor__editable_inline {
-    min-height: 170px !important;
-    max-height: 170px !important;
+.fecha {
+    font-size: 12px;
+    color: purple;
 }
